[gd_scene load_steps=2 format=3 uid="uid://clxkmnvhddgpk"]

[ext_resource type="Script" path="res://scripts/fases.gd" id="1_hypc6"]

[node name="fases" type="CanvasLayer"]
script = ExtResource("1_hypc6")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="fase_01" type="Button" parent="TextureRect"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Fase 01"

[node name="fase_02" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 1.0
offset_top = 78.0
offset_right = 67.0
offset_bottom = 109.0
text = "Fase 02"

[node name="fase_03" type="Button" parent="TextureRect"]
layout_mode = 0
offset_top = 150.0
offset_right = 66.0
offset_bottom = 181.0
text = "Fase 03"

[connection signal="pressed" from="TextureRect/fase_01" to="." method="_on_fase_01_pressed"]
[connection signal="pressed" from="TextureRect/fase_02" to="." method="_on_fase_02_pressed"]
[connection signal="pressed" from="TextureRect/fase_03" to="." method="_on_fase_03_pressed"]
